--- a/.github/workflows/make-push.yml
+++ b/.github/workflows/make-push.yml
@@ -1,4 +1,4 @@
-name: hexlet-check
+name: linter-check
 
 on:  push
 
@@ -6,5 +6,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 'poetry run flake8 brain_games'
-        run: make lint
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make install  
+        
+      - name: Run Linter
+        run: |
+          make lint
